--- a/local.yml
+++ b/local.yml
@@ -1,2 +1,8 @@
-- name: Change the working directory to somedir/ before executing the command
-  ansible.builtin.shell: install-docker.sh >> somelog.txt
+# - name: Change the working directory to somedir/ before executing the command
+#   ansible.builtin.shell: install-docker.sh >> somelog.txt
+- name: Copy script from local to remote machine
+   hosts: localhost
+   tasks:
+    - name: Execute script on remote_machine
+      script: sh script.sh  
+
