--- a/local.yml
+++ b/local.yml
@@ -4,7 +4,7 @@
   
   tasks:
     - name: Change the working directory to somedir/ before executing the command
-      ansible.builtin.shell: install-docker.sh >> somelog.txt
+      ansible.builtin.shell: ansible-code/install-docker.sh >> somelog.txt
 # - name: Copy script from local to remote machine
 #    hosts: localhost
 #    tasks:
