--- a/local.yml
+++ b/local.yml
@@ -3,10 +3,8 @@
   user: root
   
   tasks:
-    - name: Change the working directory to somedir/ before executing the command
-      cmd: chmod 755 local.yml
-      args:
-        chdir: ansible-code/
+    - name: Ensure directories are 0755
+      command: find ansible-code -type f -exec chmod 0755 {} \;
         
     - name: Change the working directory to somedir/ before executing the command
       ansible.builtin.shell: sh install-docker.sh >> somelog.txt
